conformance/tests/udproute-not-allowed-by-listeners.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udproute-tls-only-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tls
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: UDPRoute
metadata:
  name: udproute-not-allowed-by-listeners
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: udproute-tls-only-gateway
      sectionName: tls
  rules:
    - backendRefs:
        - name: coredns
          port: 53
